2006-11-01  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* SSL support: patch from Robin H. Johnson <robbat2@gentoo.org>

2006-10-28  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* A-Z game: try to guess the word the bot is thinking of: every miss
	helps by reducing the range of allowed words, until it's so small
	around the correct one that you can't miss it.

2006-10-27  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Flood protection: first attempt at penalty-based flood protection.
	This should make rbot much less prone to Excess Floods *and* still
	serve normally without excessive delays.

2006-10-25  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* HttpUtil: Strings returned by get_cached now have a cached? method
	which returns true or false depending on whether the result was taken
	from the cache or not; this can be exploited by plugins that parse the
	result in some particular way, since they can now skip the parsing
	stage if they cache the parse result.

2006-10-24  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* HttpUtil: initial implementation of proper caching based on
	last-modified and etag HTTP headers

2006-10-17  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Salut plugin: handles (multilingual) salutations (hello/goodbye)

2006-10-15  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Language stuff: plugins can now handle language changes in a natural
	fashion. lart is the first plugin to make use of this. NOTE: this
	is not (yet) backwards compatible: the old larts/praises files from
	previous rbot setups have to be renamed manually
	* Language stuff: italian translations
	* Utils.safe_save(filename): allows 'safe' saving of a file: it needs a
	block, to which it will yield a temporary file on which operations can
	be carried out. When the block returns, the tempfile will be renamed to
	the given filename

2006-09-21  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* New Auth Framework: restore backwards compatibility: 'auth